Fixed sonar smell and minor refactoring